--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webpage with Horizontal Scroll and Babylon.js</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="page-wrapper">
@@ -22,16 +22,28 @@
                 </div>
                 <div class="scroll-content">
                     <div class="scrolling-part">
-                        <div class="text">Content 1 Text</div>
-                        <div class="media"></div>
+                        <div class="left-content">
+                            <div class="text">Content 1 Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
                     </div>
                     <div class="scrolling-part">
-                        <div class="text">Content 2 Text</div>
-                        <div class="media"></div>
+                        <div class="left-content">
+                            <div class="text">Content 2 Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
                     </div>
                     <div class="scrolling-part">
-                        <div class="text">Content 3 Text</div>
-                        <div class="media"></div>
+                        <div class="left-content">
+                            <div class="text">Content 3 Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -44,16 +56,62 @@
                 </div>
                 <div class="scroll-content">
                     <div class="scrolling-part">
-                        <div class="text">Content A Text</div>
-                        <div class="media"></div>
+                        <div class="left-content">
+                            <div class="text">Content A Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
                     </div>
                     <div class="scrolling-part">
-                        <div class="text">Content B Text</div>
-                        <div class="media"></div>
+                        <div class="left-content">
+                            <div class="text">Content B Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
                     </div>
                     <div class="scrolling-part">
-                        <div class="text">Content C Text</div>
-                        <div class="media"></div>
+                        <div class="left-content">
+                            <div class="text">Content C Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll-section" id="scroll-section-3">
+            <div class="content">
+                <div class="fixed-part">
+                    <div class="title">Fixed Title 3</div>
+                    <div class="subtitle">Fixed Subtitle 3</div>
+                </div>
+                <div class="scroll-content">
+                    <div class="scrolling-part">
+                        <div class="left-content">
+                            <div class="text">Content X Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
+                    </div>
+                    <div class="scrolling-part">
+                        <div class="left-content">
+                            <div class="text">Content Y Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
+                    </div>
+                    <div class="scrolling-part">
+                        <div class="left-content">
+                            <div class="text">Content Z Text</div>
+                        </div>
+                        <div class="right-content">
+                            <div class="media"></div>
+                        </div>
                     </div>
                 </div>
             </div>
