--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="pagination-dots">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
             </div>
         </div>
         <div class="scroll-section" id="scroll-section-2">
@@ -80,6 +85,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="pagination-dots">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
             </div>
         </div>
         <div class="scroll-section" id="scroll-section-3">
@@ -113,6 +123,11 @@
                             <div class="media"></div>
                         </div>
                     </div>
+                </div>
+                <div class="pagination-dots">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
                 </div>
             </div>
         </div>
