--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="page-wrapper">
         <div class="main-section">
             <h1>Main Section</h1>
+            <div id="main-section-svg"></div>
         </div>
         <div class="scroll-section" id="scroll-section-1">
             <div class="content">
