--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 </head>
 <body>
     <div class="page-wrapper">
@@ -136,5 +137,6 @@
     <script src="scripts/scrolling.js"></script>
     <script src="scripts/babylon-setup.js"></script>
     <script src="scripts/chart.js"></script>
+    <script src="scripts/svgAnimate.js"></script>
 </body>
 </html>
