--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="page-wrapper">
         <div class="main-section">
-            
+            <div id="journal-container">
+                <img id="journal-image" src="https://img.freepik.com/free-vector/realistic-test-paper-composition-with-pencil-stack-students-paperwork-with-marks-correct-answers_1284-54249.jpg" alt="Journal Paper" />
+            </div>
             <div id="main-section-svg"></div>
         </div>
         <div class="scroll-section" id="scroll-section-1">
