--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@
     <script src="scripts/scrolling.js"></script>
     <script src="scripts/babylon-setup.js"></script>
     <script src="scripts/chart.js"></script>
-    
+    <script src="scripts/svgAnimate.js"></script>
 </body>
 </html>
