Text for the main section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
 
         </div>
+        <div class="text">Main Text</div>
         <div class="scroll-section" id="scroll-section-1">
             <div class="content">
                 <div class="fixed-part">
