--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div id="journal-container">
                 <img id="journal-image" src="https://img.freepik.com/free-vector/realistic-test-paper-composition-with-pencil-stack-students-paperwork-with-marks-correct-answers_1284-54249.jpg" alt="Journal Paper" />
             </div>
-
+            
         </div>
-        <div class="text">Main Text</div>
+        <div class="main-text">Main Text</div>
         <div class="scroll-section" id="scroll-section-1">
             <div class="content">
                 <div class="fixed-part">
