--- a/index.html
+++ b/index.html
@@ -21,6 +21,42 @@
             
         </div>
         <div class="main-text">Main Text</div>
+        <div class="section" id="section-1">
+            <div class="header">
+                <div>
+                    <h2>Section Title 1</h2>
+                    <h3>Section Subtitle 1</h3>
+                </div>
+                <div class="toggle-icon">&#x25BC;</div>
+            </div>
+            <div class="section-content">
+                <div class="scrolling-part">
+                    <div class="left-content">
+                        <div class="text">Content 1 Text</div>
+                    </div>
+                    <div class="right-content">
+                        <div class="media"></div>
+                    </div>
+                </div>
+                <div class="scrolling-part">
+                    <div class="left-content">
+                        <div class="text">Content 2 Text</div>
+                    </div>
+                    <div class="right-content">
+                        <div class="media"></div>
+                    </div>
+                </div>
+                <div class="scrolling-part">
+                    <div class="left-content">
+                        <div class="text">Content 3 Text</div>
+                    </div>
+                    <div class="right-content">
+                        <div class="media"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="scroll-section" id="scroll-section-1">
             <div class="content">
                 <div class="fixed-part">
@@ -139,6 +175,7 @@
             </div>
         </div>
     </div>
+    <script src="scripts/toggable.js"></script>
     <script src="scripts/scrolling.js"></script>
     <script src="scripts/babylon-setup.js"></script>
     <script src="scripts/chart.js"></script>
