--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
         </div>
         <div class="main-text">Main Text</div>
-        <div class="section" id="section-1">
+        <div class="toggable-section" id="section-1">
             <div class="header">
                 <div>
                     <h2>Section Title 1</h2>
@@ -128,13 +128,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="pagination-dots">
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                </div>
             </div>
         </div>
+        
         <div class="scroll-section" id="scroll-section-3">
             <div class="content">
                 <div class="fixed-part">
