--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
     </div>
     <script src="scripts/toggable.js"></script>
-    <script src="scripts/scrolling.js"></script>
+    <!-- <script src="scripts/scrolling.js"></script> -->
     <script src="scripts/babylon-setup.js"></script>
     <script src="scripts/chart.js"></script>
     <script src="scripts/svgAnimate.js"></script>
