--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="main-text">Main Text</div>
         <div class="toggable-section" id="section-1">
             <div class="header">
-                <div>
-                    <h2>Section Title 1</h2>
-                    <h3>Section Subtitle 1</h3>
+                <div class="fixed-part">
+                    <div class="title">Fixed Title 1</div>
+                    <div class="subtitle">Fixed Subtitle 1</div>
                 </div>
                 <div class="toggle-icon">&#x25BC;</div>
             </div>
