--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="toggle-icon">&#x25BC;</div>
             </div>
-            <div class="toggable-section-content">
+            <div class="toggable-section-content" id="scroll-section-1">
                 <div class="scrolling-part">
                     <div class="left-content">
                         <div class="text">Content 1 Text</div>
