--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             
         </div>
         <div class="main-text">Main Text</div>
-        <div class="toggable-section" id="section-1">
+        <div id="section-1">
+        <div class="toggable-section">
             <div class="header">
-                <div class="fixed-part">
+                <div>
                     <div class="title">Fixed Title 1</div>
                     <div class="subtitle">Fixed Subtitle 1</div>
                 </div>
@@ -56,7 +57,8 @@
                 </div>
             </div>
         </div>
-
+        </div>
+        
         <div class="scroll-section" id="scroll-section-1">
             <div class="content">
                 <div class="fixed-part">
