--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;600&display=swap" rel="stylesheet">
+    <script> 
+        function sendHeight() {
+    var height = document.documentElement.scrollHeight;
+    window.parent.postMessage(height, '*');
+}
+
+window.addEventListener('load', sendHeight);
+window.addEventListener('resize', sendHeight);
+    </script>
 </head>
 <body>
     <div class="page-wrapper">
@@ -142,7 +151,6 @@
     <script src="scripts/toggable.js"></script>
     <!-- <script src="scripts/scrolling.js"></script> -->
     <script src="scripts/babylon-setup.js"></script>
-    
     <script src="scripts/svgAnimate.js"></script>
 </body>
 </html>
